syntax = "proto3";

option go_package = "github.com/k8s-autoscaling/pv_monitor/pv_monitor";

package pv_monitor;

service PVService {
  rpc RequestPVNames(PVRequest) returns (PVResponse) {}
  rpc ReplyPVInfos(PVInfosRequest) returns (PVInfosResponse) {}
}

message PVRequest {
  string id = 1;
}

message PVResponse {
  repeated string pvNames = 1;
}

message PVInfo {
  float PVDiskUtilization  = 1;
  float PVDiskIOPS         = 2;
  float PVDiskWriteKBPS    = 3;
  float PVDiskReadKBPS     = 4;
}

message PVInfosRequest {
  map<string, PVInfo> PVInfos = 1;   /* PVName --> PVInfo */
}

message PVInfosResponse {
  int32 status  = 1;
}
